<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Class.Info_Gas">


    <TextView
        android:id="@+id/info_text_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/julius_sans_one"
        android:text="@string/info_text"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center"/>

    <TextView
        android:id="@+id/name_title_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:fontFamily="@font/julius_sans_one"
        android:gravity="center"
        android:text="@string/name_gas"
        android:textSize="18sp"
        android:textColor="@android:color/holo_red_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/info_text_info"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/name_text_info"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:fontFamily="@font/julius_sans_one"
        android:gravity="center"
        android:text="@string/name_gas"
        android:textSize="18sp"
        android:textColor="@android:color/background_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_title_info"
        android:layout_marginTop="5dp"/>

    <TextView
        android:id="@+id/street_title_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:fontFamily="@font/julius_sans_one"
        android:gravity="center"
        android:text="@string/street_gas"
        android:textSize="18sp"
        android:textColor="@android:color/holo_red_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_text_info"
        android:layout_marginTop="5dp"/>

    <TextView
        android:id="@+id/street_text_info"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:fontFamily="@font/julius_sans_one"
        android:gravity="center"
        android:text="@string/street_gas"
        android:textSize="18sp"
        android:textColor="@android:color/background_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/street_title_info"
        android:layout_marginTop="5dp"
        />
    <TextView
        android:id="@+id/pc_title_info"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:fontFamily="@font/julius_sans_one"
        android:gravity="center"
        android:text="@string/pc_gas"
        android:textSize="18sp"
        android:textColor="@android:color/holo_red_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/street_text_info"
        android:layout_marginTop="5dp"
        />
    <TextView
        android:id="@+id/pc_text_info"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:fontFamily="@font/julius_sans_one"
        android:gravity="center"
        android:text="@string/pc_gas"
        android:textSize="18sp"
        android:textColor="@android:color/background_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pc_title_info"
        android:layout_marginTop="5dp"
        />

    <TextView
        android:id="@+id/rfc_title_info"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:fontFamily="@font/julius_sans_one"
        android:gravity="center"
        android:text="@string/rfc_gas"
        android:textSize="18sp"
        android:textColor="@android:color/holo_red_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pc_text_info"
        android:layout_marginTop="5dp"
        />
    <TextView
        android:id="@+id/rfc_text_info"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:fontFamily="@font/julius_sans_one"
        android:gravity="center"
        android:text="@string/rfc_gas"
        android:textSize="18sp"
        android:textColor="@android:color/background_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rfc_title_info"
        android:layout_marginTop="5dp"

        />

    <TextView
        android:id="@+id/regular_title_info"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:fontFamily="@font/julius_sans_one"
        android:gravity="center"
        android:text="@string/regular_gas"
        android:textSize="18sp"
        android:textColor="@android:color/holo_red_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/rfc_text_info"
        android:layout_marginTop="25dp"
        />
    <TextView
        android:id="@+id/regular_text_info"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:fontFamily="@font/julius_sans_one"
        android:gravity="center"
        android:text="@string/regular_gas"
        android:textSize="18sp"
        android:textColor="@android:color/background_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/regular_title_info"
        android:layout_marginTop="5dp"

        />
    <TextView
        android:id="@+id/premium_title_info"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:fontFamily="@font/julius_sans_one"
        android:gravity="center"
        android:text="@string/premium_gas"
        android:textSize="18sp"
        android:textColor="@android:color/holo_red_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/regular_text_info"
        android:layout_marginTop="5dp"
        />
    <TextView
        android:id="@+id/premium_text_info"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:fontFamily="@font/julius_sans_one"
        android:gravity="center"
        android:text="@string/premium_gas"
        android:textSize="18sp"
        android:textColor="@android:color/background_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/premium_title_info"
        android:layout_marginTop="5dp"

        />
    <TextView
        android:id="@+id/lat_title_info"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:fontFamily="@font/julius_sans_one"
        android:gravity="center"
        android:text="@string/lat_gas"
        android:textSize="18sp"
        android:textColor="@android:color/holo_red_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/premium_text_info"
        android:layout_marginTop="5dp"
        />
    <TextView
        android:id="@+id/lat_text_info"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:fontFamily="@font/julius_sans_one"
        android:gravity="center"
        android:text="@string/lat_gas"
        android:textSize="18sp"
        android:textColor="@android:color/background_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lat_title_info"
        android:layout_marginTop="5dp"

        />

    <TextView
        android:id="@+id/lon_title_info"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:fontFamily="@font/julius_sans_one"
        android:gravity="center"
        android:text="@string/lon_gas"
        android:textSize="18sp"
        android:textColor="@android:color/holo_red_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lat_text_info"
        android:layout_marginTop="5dp"
        />
    <TextView
        android:id="@+id/lon_text_info"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:fontFamily="@font/julius_sans_one"
        android:gravity="center"
        android:text="@string/lon_gas"
        android:textSize="18sp"
        android:textColor="@android:color/background_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lon_title_info"
        android:layout_marginTop="5dp"

        />

    <Button
        android:id="@+id/info_close_button"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/julius_sans_one"
        android:text="@string/back_text"
        android:layout_marginLeft="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lon_text_info"
        android:textColor="@android:color/holo_red_dark"
        />

    <Button
        android:id="@+id/info_send_button"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:fontFamily="@font/julius_sans_one"
        android:text="@string/send_text"

        android:textColor="@android:color/holo_red_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.886"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lon_text_info" />


</androidx.constraintlayout.widget.ConstraintLayout>